<resources>

    <item name="tag_pos" type="id">pos</item>
    <item name="tag_chapter" type="id">chapter</item>
    <item name="tag_status" type="id">status</item>
    <item name="tag_issplit" type="id">issplit</item>


    <string name="app_name">爬耙读书</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="novel_list_title">我的书架</string>
    <string name="novel_list_edit">编辑</string>
    <string name="novel_list_remove">删除</string>
    <string name="novel_list_search">搜索</string>
    <string name="novel_search_title">书城搜索</string>
    <string name="novel_search_hint">搜索书名</string>
    <string name="novel_search_loading">正在搜索中...</string>
    <string name="novel_search_foot">加载中...</string>
    <string name="novel_type_ing">连载</string>
    <string name="novel_type_over">完结</string>
    <string name="novel_list_remove_msg">是否要删除%1$s？</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="err_not_found">主人，没找到啊...</string>
    <string name="err_network">主人，网络挂了...</string>
    <string name="novel_reader_loading">主人，正在搬运中...</string>
    <string name="novel_reader_err_msg">主人，再戮我一下...</string>
    <string name="novel_panel_list">书架</string>
    <string name="novel_panel_cache">缓存</string>
    <string name="novel_panel_dict">目录</string>
    <string name="novel_panel_search">搜索</string>
    <string name="novel_dict_prev">上一页</string>
    <string name="novel_dict_next">下一页</string>
    <string name="novel_dict_group">目录列表</string>
    <string name="novel_dict_chapter">第%1$d章-第%2$d章</string>
    <string name="novel_dict_duration">%1$d小时%2$d分</string>
    <string name="novel_list_add_msg">是否要保留%1$s？</string>



</resources>
