<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBC49B"
    android:orientation="vertical"
    tools:context=".ui.fragments.PPNovelListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/novel_list_edit_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="0"
            android:gravity="left|center_vertical"
            android:text="@string/novel_list_edit"
            android:textColor="#0277BD"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/novel_list_remove_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="0"
            android:gravity="left|center_vertical"
            android:text="@string/novel_list_remove"
            android:textColor="#0277BD"
            android:visibility="gone"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/novel_list_title"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/novel_list_search_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="0"
            android:gravity="right|center_vertical"
            android:text="@string/novel_list_search"
            android:textColor="#0277BD"
            android:textSize="18sp" />
    </LinearLayout>

    <GridView
        android:id="@+id/novel_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:columnWidth="100dp"
        android:numColumns="auto_fit"
        android:scrollbars = "none"
        android:stretchMode="spacingWidth"
        android:verticalSpacing="20dp" />

</LinearLayout>